# Calc

./: .gitignore  CMakeLists.txt  README.md
src/: func.cpp  main.cpp  myLib.h
